Fixed insecure links
changed http://  to https://

--- a/index (OLD).html
+++ b/index (OLD).html
@@ -34,7 +34,7 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar">
         
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 
@@ -279,11 +279,11 @@
               <!-- Item 1 -->
               <div class="col-md-4 portfolio-item hover-bottom webdesign print">
                 <figure>
-                  <img src="http://placehold.it/990x650/aaa/ccc" alt="Project Example">
+                  <img src="https://placehold.it/990x650/aaa/ccc" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -293,11 +293,11 @@
               <!-- Item 2 -->
               <div class="col-md-4 portfolio-item hover-bottom print">
                 <figure>
-                  <img src="http://placehold.it/990x650" alt="Project Example">
+                  <img src="https://placehold.it/990x650" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -307,11 +307,11 @@
               <!-- Item 3 -->
               <div class="col-md-4 portfolio-item hover-bottom photo">
                 <figure>
-                  <img src="http://placehold.it/990x650/aaa/ccc" alt="Project Example">
+                  <img src="https://placehold.it/990x650/aaa/ccc" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -321,11 +321,11 @@
               <!-- Item 4 -->
               <div class="col-md-4 portfolio-item hover-bottom webdesing photo">
                 <figure>
-                  <img src="http://placehold.it/990x650" alt="Project Example">
+                  <img src="https://placehold.it/990x650" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -335,11 +335,11 @@
               <!-- Item 5 -->
               <div class="col-md-4 portfolio-item hover-bottom print photo">
                 <figure>
-                  <img src="http://placehold.it/990x650/aaa/ccc" alt="Project Example">
+                  <img src="https://placehold.it/990x650/aaa/ccc" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -349,11 +349,11 @@
               <!-- Item 6 -->
               <div class="col-md-4 portfolio-item hover-bottom webdesing">
                 <figure>
-                  <img src="http://placehold.it/990x650" alt="Project Example">
+                  <img src="https://placehold.it/990x650" alt="Project Example">
                   <figcaption>
                     <h4 class="hover-heading">Project Name</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="http://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="https://placehold.it/990x650"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="pages/portfolio/portfolio-single-1.html"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
