--- a/pages/contact.html
+++ b/pages/contact.html
@@ -156,7 +156,7 @@
               <ul>
                 <!-- <li><a href="#">Facebook</a></li>
                 <li><a href="#">YouTube</a></li> -->
-                <li><a href="http://www.medium.com/@greyz" target="_blank">Medium</a></li>
+                <li><a href="https://www.medium.com/@greyz" target="_blank">Medium</a></li>
               </ul>
 
             </div>
