--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar">
         
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 
@@ -374,7 +374,7 @@
                     <h4 class="hover-heading">Church Website Promo</h4>
                     <ul class="hover-btns">
                       <li><a class="open-gallery" href="assets/images/portfolio/online.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="http://www.winnlbc.com/" target="_blank"><i class="fa fa-share"></i></a></li>
+                      <li><a href="https://www.winnlbc.com/" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
@@ -580,7 +580,7 @@
                 <ul>
                   <!-- <li><a href="#">facebook</a></li>
                   <li><a href="#">YouTube</a></li> -->
-                  <li><a href="http://www.medium.com/@greyz" target="_blank">Medium</a></li>
+                  <li><a href="https://www.medium.com/@greyz" target="_blank">Medium</a></li>
                 </ul>
 
               </div>
