--- a/pages/portfolio/amplify.html
+++ b/pages/portfolio/amplify.html
@@ -34,7 +34,7 @@
     <body id="page-top">
         
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 
@@ -101,7 +101,7 @@
               <h5>amplify.</h5>
               <ul>
                 <li><h6>Date:</h6><span>2/17/2017</span></li>
-                <li><h6>Link:</h6><a href="http://www.theamplifyconference.com/" target="_blank">http://www.theamplifyconference.com</a></li>
+                <li><h6>Link:</h6><a href="https://www.theamplifyconference.com/" target="_blank">https://www.theamplifyconference.com</a></li>
                 <li><h6>Type:</h6><span>Branding, Identity, Webdesign, Strategy, Logo design</span></li>
               </ul>
             </div>
@@ -123,7 +123,7 @@
           <!-- Image -->
           <div class="row">
             <div class="col-md-12 project-images">
-              <img src="http://placehold.it/1140x1410" alt="Project Image">
+              <img src="https://placehold.it/1140x1410" alt="Project Image">
             </div>
           </div><!-- / .row -->
 
@@ -189,7 +189,7 @@
                 <ul>
                   <li><a href="#">facebook</a></li>
                   <li><a href="#">YouTube</a></li>
-                  <li><a href="http://www.medium.com/@greyz">Medium</a></li>
+                  <li><a href="https://www.medium.com/@greyz">Medium</a></li>
                 </ul>
 
               </div>
