--- a/pages/portfolio/presence.html
+++ b/pages/portfolio/presence.html
@@ -34,7 +34,7 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar">
         
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 
@@ -113,7 +113,7 @@
                 <h5>Presence</h5>
                 <ul>
                   <li><h6>Date:</h6><span>04/20/2017</span></li>
-                  <li><h6>Link:</h6><a href="#">http://www.winnewlife.com</a></li>
+                  <li><h6>Link:</h6><a href="#">https://www.winnewlife.com</a></li>
                   <li><h6>Type:</h6><span>Type Design, Graphic Design, Illustrator, Photoshop</span></li>
                 </ul>
               </div>
